sass/components/_article.scss
body:has(#banner-container) {
	background: var(--bg-overlay), var(--blurnail), var(--accent-color);
	background-position: center;
	background-size: cover;
	background-attachment: fixed;
}

#banner-container {
	--mask: linear-gradient(black calc(50% + 2rem), transparent);
	-webkit-mask-image: var(--mask);
	position: absolute;
	z-index: -1;
	mask-image: var(--mask);
	inset: 0;
	width: 100vw;
	height: min(calc((var(--container-width) / 2) + 4rem), calc(50vw + 3rem));

	&::before {
		position: fixed;
		transform: translateX(-50%);
		filter: blur(4rem);
		animation: banner-glow-load 1.6s;
		margin-block-start: 4rem;
		inset-inline-start: 50%;
		border-radius: var(--rounded-corner) var(--rounded-corner) 0 0;
		background: var(--blurnail) center / cover fixed;
		aspect-ratio: 2 / 1;
		width: min(var(--container-width), calc(100% - 2rem));
		content: "";

		@keyframes banner-glow-load {
			from,
			25% {
				opacity: 0;
			}
		}
	}

	#banner {
		position: fixed;
		transform: translateX(-50%);
		animation: banner-load var(--transition-longer);
		margin: 0;
		margin-block-start: 4rem;
		inset-inline-start: 50%;
		border-radius: var(--rounded-corner) var(--rounded-corner) 0 0;
		width: min(var(--container-width), calc(100% - 2rem));

		@keyframes banner-load {
			from {
				transform: translateX(-50%) var(--hover);
				opacity: 0;
			}
		}
	}

	& + article > #heading {
		margin-block-start: min(calc(var(--container-width) / 2), calc(50vw - 1rem));
	}
}

#heading {
	margin: 2rem 0 4rem;
	text-align: center;

	h1 {
		-webkit-background-clip: text;
		margin: 0;
		background-image: linear-gradient(to right,
				var(--fg-muted-1),
				var(--fg-muted-2),
				var(--fg-muted-1));
		background-clip: text;
		color: transparent;

		&+p {
			display: inline;
		}
	}

	.tags {
		display: inline-flex;
		justify-content: center;
		margin-block-start: 1rem;
	}
}

#buttons-container {
	display: flex;
	position: fixed;
	flex-direction: column;
	gap: 0.25rem;
	animation: slide-in-reverse var(--transition-bezier) 0.525s;
	inset-block-end: 1rem;
	inset-inline-end: 1rem;

	@media only screen and (max-width: 720px) {
		position: static;
		flex-direction: row-reverse;
		animation: none;
		margin-block-start: 2rem;
	}

	summary,
	#go-to-top,
	#share,
	#issue {
		-webkit-backdrop-filter: var(--blur);
		display: inline-block;
		backdrop-filter: var(--blur);
		transition: all var(--transition), transform var(--transition-bezier);
		box-shadow: var(--edge-highlight), var(--shadow);
		border-radius: var(--rounded-corner);
		background-color: var(--glass-bg-1);
		padding: 0.625rem;
		color: var(--accent-color);
		line-height: 0;

		&:hover {
			background-color: var(--glass-bg-2);
		}

		&:active {
			transform: var(--active);
		}

		.icon {
			transition: var(--transition);
		}
	}

	details {
		position: relative;
		box-shadow: none;
		border-radius: 0;
		background-color: transparent;
		padding: 0;

		&[open] summary~* {
			transform-origin: bottom right;
			animation: expand-bottom-right var(--transition-bezier);
		}

		summary {
			&::before {
				display: none;
			}
		}
	}

	summary+div {
		-webkit-backdrop-filter: var(--blur);
		display: flex;
		position: absolute;
		flex-direction: column;
		z-index: 1;
		backdrop-filter: var(--blur);
		inset-block-end: 0;
		inset-inline-end: 3rem;
		box-shadow: var(--edge-highlight), var(--shadow-glass);
		border-radius: var(--rounded-corner);
		background-color: var(--glass-bg-1);
		padding: 0.75rem 1rem;
		width: min(calc(var(--container-width) / 3), calc(100vw - 4.5rem));
		max-height: 50vh;

		@media only screen and (max-width: 720px) {
			inset-inline-end: 2.5rem;
		}

		strong.title {
			border-block-end: var(--bg-muted-2) max(1px, 0.0625rem) solid;
			padding-block-end: 0.5rem;
		}

		div {
			--mask: linear-gradient(to bottom,
					transparent,
					black 1rem,
					black calc(100% - 1rem),
					transparent);
			-webkit-mask-image: var(--mask);
			flex: 1;
			mask-image: var(--mask);
			margin: 0 -1rem -1rem;
			padding: 1rem;
			padding-block-start: 0;
			overflow: auto;
		}

		ol,
		ul {
			margin: 0;
			padding-inline-start: 0.75rem;
			font-size: var(--font-size-small);

			&:first-child {
				margin-block-start: 0.5rem;
			}
		}
	}

	#toc .icon {
		-webkit-mask-image: var(--icon-toc);
		mask-image: var(--icon-toc);
	}

	#backlinks {
		.icon {
			-webkit-mask-image: var(--icon-backlinks);
			mask-image: var(--icon-backlinks);
		}

		summary+div {
			width: min(calc(var(--container-width) / 3), calc(90vw - 5rem));
		}
	}

	#go-to-top {
		@media only screen and (max-width: 720px) {
			display: none;
		}

		.icon {
			-webkit-mask-image: var(--icon-top);
			mask-image: var(--icon-top);
		}
	}

	#share .icon {
		-webkit-mask-image: var(--icon-share);
		mask-image: var(--icon-share);
	}

	#issue .icon {
		-webkit-mask-image: var(--icon-bug);
		mask-image: var(--icon-bug);
	}
}

